# render-engine-rss

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt  setup.sh
.github/workflows/: publish.yaml  test.yml
src/render_engine_rss/: __init__.py  collection.py  parsers.py
src/render_engine_rss.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: test_output.rss  test_rssCollection.py  test_rssfeedpageparser.py
